--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="E:/onest/study/XmlCodeGenerat/lib/freemarker-2.3.8.jar"/>
 	<classpathentry kind="lib" path="E:/onest/study/XmlCodeGenerat/lib/guava-11.0.2.jar"/>
-	<classpathentry kind="lib" path="E:/onest/onest_4/trunk/build/onest-4-trunk.jar"/>
+	<classpathentry kind="lib" path="E:/onest/onest_4/trunk/lib/java/commons/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="E:/onest/onest-4-trunk.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
